tests/errors/infer_walrus_error_01.f90
program infer_walrus_error_01
    implicit none
    integer :: x
    x := 5
end program
